[gd_scene load_steps=4 format=3 uid="uid://ciy3fqhmq0y3a"]

[ext_resource type="Script" path="res://GUI/ShipBuilderGUI.gd" id="1_r7hn4"]
[ext_resource type="Script" path="res://GUI/NameEdit.gd" id="2_roqdu"]
[ext_resource type="Script" path="res://GUI/FPSCount.gd" id="3_oio2q"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_r7hn4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 533.0
offset_bottom = 233.0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="NewSaveLoadButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="New" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/NewSaveLoadButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "New
"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/NewSaveLoadButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Save
"

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/NewSaveLoadButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Delete
"

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Name: "

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "New Ship"
script = ExtResource("2_roqdu")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="SaveListScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer2/PanelContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="SaveList" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/PanelContainer/SaveListScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1795.0
offset_top = 20.0
offset_right = 1881.0
offset_bottom = 74.0
text = "FPS: 100"
autowrap_mode = 3
script = ExtResource("3_oio2q")

[node name="FuelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1373.0
offset_top = 24.0
offset_right = 1540.0
offset_bottom = 52.0
text = "current / max"
autowrap_mode = 3

[node name="FuelBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 22.0
offset_right = 1353.0
offset_bottom = 49.0
value = 10.0

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/NewSaveLoadButtons/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/NewSaveLoadButtons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/NewSaveLoadButtons/Delete" to="." method="_on_delete_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer2/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
